# android_cv_bridge

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  build.gradle  buildscript.gradle  package.xml  settings.gradle
Release/0.0.1/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.2/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.3/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.4/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.5/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.6/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk
Release/0.0.7/: android_tutorial_CompressedImage_cv_bridge-release.apk  android_tutorial_cv_bridge-release.apk  android_tutorial_cv_bridge_CompressedImage-release.apk  android_tutorial_cv_bridge_Image-release.apk
android_tutorial_CompressedImage_cv_bridge/: AndroidManifest.xml  build.gradle
android_tutorial_CompressedImage_cv_bridge/res/layout/: main.xml
android_tutorial_CompressedImage_cv_bridge/res/values/: strings.xml
android_tutorial_CompressedImage_cv_bridge_javacv/: build.gradle
android_tutorial_CompressedImage_cv_bridge_javacv/res/values/: strings.xml
android_tutorial_CompressedImage_cv_bridge_native/: AndroidManifest.xml  build.gradle
android_tutorial_CompressedImage_cv_bridge_native/res/layout/: main.xml
android_tutorial_CompressedImage_cv_bridge_native/res/values/: strings.xml
android_tutorial_cv_bridge/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge/res/values/: strings.xml
android_tutorial_cv_bridge_CompressedImage/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge_CompressedImage_javacv/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge_Image/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge_Image/res/values/: strings.xml
android_tutorial_cv_bridge_Image_javacv/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge_javacv/: build.gradle
android_tutorial_cv_bridge_javacv/res/values/: strings.xml
android_tutorial_cv_bridge_native/: AndroidManifest.xml  build.gradle
android_tutorial_cv_bridge_native/res/layout/: main.xml
android_tutorial_cv_bridge_native/res/values/: strings.xml
cv_bridge/: AndroidManifest.xml  build.gradle
cv_bridge/src/cv_bridge/: CvCompressImage.java  CvImage.java  Encode.java  (+2 more)
cv_bridge_javacv/: build.gradle
cv_bridge_native/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
image/: build.gradle
lib_cv_bridge/: build.gradle
opencv/: build.gradle
opencv3/: build.gradle
opencv3.1/: build.gradle
(+20 files in other folders)
