<?xml version="1.0"?>
<package>
    <name>cv_bridge</name>
    <version>0.0.0</version>
    <description>
        Android cv_bridge support packages for rosjava.
    </description>
    <url type="website">http://wiki.ros.org/cv_bridge</url>
    <url type="repository">https://github.com/talregev/cv_bridge</url>
    <url type="bugtracker">https://github.com/talregev/cv_bridge/issues</url>
    <maintainer email="tal.regev@gmail.com">Tal Regev</maintainer>
    <author email="tal.regev@gmail.com">Tal Regev</author>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>rosjava_core</build_depend>
</package>
